Adding call for admin button